# Class_Bit_Array

./: BittArray.cpp  CMakeLists.txt  README.md  main.cpp
test/: BittArray_test.cpp  BittArray_test.h  CMakeLists.txt  test_main.cpp
